ant doc now generates documentation